--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,8 @@ body {
     background-color: bisque;
     }
 
-footer {
-    background-color: black
-    color: white;
-    }
+    footer {
+        background-color: black;
+        color: white;
+        bottom: 0;
+        }
