--- a/assets/style.css
+++ b/assets/style.css
@@ -21,3 +21,11 @@ body {
                 background-color: bisque;
                 font-family: Bai Jamjuree;
                 }
+
+                #container {
+                    display: flex;
+                    }
+
+                    .cartao {
+                        margin: 1rem 1rem;
+                        }
