--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #800000;
+    --card-front-color: #387F39;
     --card-back-color: #00F4BF;
 }
 
