--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #1b0058;
-    --card-back-color: #00F4BF;
+    --card-back-color: #8c00ff;
 }
 
 body {
