--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #DBE4EF;
+    --text-color: #00ffff;
     --card-front-color: #1b0058;
     --card-back-color: #8c00ff;
 }
