--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #fdffff;
-    --card-front-color: #1b0058;
-    --card-back-color: #8c00ff;
+    --card-front-color: #001f58;
+    --card-back-color: #b050ff;
 }
 
 body {
